[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twi2blog"
version = "0.1.0"
description = "Convert Twitter archive into markdown blog drafts"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
twi2blog = "twi2blog.cli:main"
